# chip-8-emulator

./: CMakeLists.txt  README.md  main.c
builds/: CMakeCache.txt  Makefile  chip-8-emulator  cmake_install.cmake
src/: chip8.c  chip8.h  main.c  stack.c  stack.h
